button z-index fixed

--- a/ikea-vs-death-metal/src/App.css
+++ b/ikea-vs-death-metal/src/App.css
@@ -123,7 +123,9 @@
   white-space: nowrap;
   cursor: pointer;
   margin: 0 auto;
-}
+  /* position: relative; */
+  z-index: 2;
+  }
 
 .main-button:active,
 .main-button:hover {
@@ -371,7 +373,7 @@
 
   .home-text {
     font-size: 1.2rem;
-    padding: 3vh;
+    padding: 1vh 10vw;
     margin: 0;
 
   }
